manifests/base/resources/spaces/resources/service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    prometheus.io/port: "6080"
    prometheus.io/scrape: "true"
  labels:
    app: spaces
    chart: spaces-2.8.25
    heritage: Helm
    release: spaces
  name: spaces
spec:
  ports:
  - name: spaces
    port: 6080
    protocol: TCP
    targetPort: 6080
  selector:
    app: spaces
    release: spaces
  type: ClusterIP
---
